--- a/style.css
+++ b/style.css
@@ -185,6 +185,13 @@ a {
     color: darkslategray;
 }
 
+.card:hover .card__name {
+    background-color: #f1f4f6b2;
+    color: rgb(2, 54, 54);
+    padding: 3px;
+    border-radius: 30px;
+}
+
 .card__name:hover:after {
     font: var(--fa-font-solid);
     content: "\f00e";
@@ -202,10 +209,20 @@ a {
     border: none;
     background-color: transparent;
     background-image: none;
-    color: #CE2724;
+    color: #c3c0c0;
     padding: 0;
     cursor: pointer;
     z-index: 2;
+    transition: color 0.3s;
+}
+
+.card__like_active {
+    color: #CE2724;
+    --animation-duration: 1s;
+    animation-name: heartBeat;
+    animation-duration: calc(var(--animation-duration)*1.3);
+    animation-timing-function: ease-in-out;
+
 }
 
 .card::before {
@@ -219,6 +236,12 @@ a {
     backdrop-filter: blur(2px);
     transition: .5s linear;
     transition-property: backdrop-filter, background-color;
+    pointer-events: none;
+}
+
+.card:hover::before {
+    backdrop-filter: blur(0);
+    background-color: transparent;
 }
 
 .cards {
@@ -256,10 +279,30 @@ a {
 
 .popup__container {
     max-width: 600px;
-    background:linear-gradient(120deg, rgba(161, 227, 182, 0.983), rgba(141, 190, 235, 0.703));;
+    background: linear-gradient(120deg, rgba(161, 227, 182, 0.983), rgba(141, 190, 235, 0.703));
+    ;
     padding: 20px;
     position: relative;
     border-radius: 40px;
+
+}
+
+.popup__container-image {
+    max-width: 400px;
+    max-height: -webkit-fill-availablex;
+    background: white;
+    padding: 5px;
+    position: relative;
+    border-radius: 40px;
+    object-fit: cover;
+}
+
+.popup__image {
+    object-fit: cover;
+    max-width: 100%;
+    max-height: 100%;
+    border-radius: 40px;
+    position: relative;
 }
 
 .popup__close {
@@ -274,11 +317,6 @@ a {
     top: -40px;
     right: -40px;
     font-size: 30px;
-}
-
-.popup__image {
-    max-width: 100%;
-    max-height: 100%;
 }
 
 .form {
@@ -348,9 +386,9 @@ a {
 .form__checkbox:checked~.form__fake-checkbox,
 .form__checkbox:checked~.form__label {
     color: #283eca;
-    font-weight:bolder;
+    font-weight: bolder;
     opacity: 1;
-
+    cursor: pointer;
 }
 
 .form__checkbox:checked:focus~.form__fake-checkbox,
@@ -364,7 +402,6 @@ a {
     padding: 20px;
     position: relative;
     border-radius: 5px;
-
 }
 
 .formL {
@@ -414,24 +451,111 @@ a {
     content: "id";
 }
 
-#on {
-    color: #CE2724;
-}
-
 .cat-info__deleted {
+    padding: 7px;
     background-color: rgba(136, 7, 7, 0.577);
     color: #fff;
-    font-size: 18px;
+    font-size: 15px;
+    gap: 10px;
+    border: none;
+    cursor: pointer;
+    font-family: 'Sofia Sans';
+    border-radius: 30px;
+    display: block;
+    margin-left: 170px;
+    margin-bottom: 10px;
+}
+
+.cat-info__edited {
+    padding: 7px;
+    background: linear-gradient(100deg, rgba(17, 73, 19, 0.759), rgba(136, 243, 54, 0.983));
+    color: #fff;
+    font-size: 15px;
     gap: 10px;
     border: none;
     cursor: pointer;
     font-family: 'Sofia Sans';
     border-radius: 40px;
+    display: block;
+    margin-left: 160px;
 }
+
+.cat-info__edited_hidden {
+    display: none;
+}
+
+.cat-info__saved_hidden {
+    display: none;
+}
+
+.cat-info [contentEditable="true"] {
+    box-shadow: 0 0 1px 1px #CE2724;
+    outline: none;
+    border-radius: 5px;
+}
+
+.cat-info [contentEditable="true"]:focus {
+    box-shadow: 0 0 1px 1px #cec624;
+    outline: none;
+    border-radius: 10px;
+}
+
+.cat-info__saved {
+    background: linear-gradient(30deg, rgba(239, 104, 25, 0.983), rgba(232, 244, 9, 0.759));
+    color: #fff;
+    font-size: 15px;
+    gap: 30px;
+    padding: 7px;
+    border: none;
+    cursor: pointer;
+    font-family: 'Sofia Sans';
+    border-radius: 40px;
+}
+
+.cat-info__like {
+    font-size: 15px;
+    gap: 10px;
+    border: none;
+    cursor: pointer;
+    color: #9b9595;
+}
+
+.cat-info__age {
+    font-style: italic;
+    font-weight: bold;
+    gap: 10px;
+    font-family: 'Sofia Sans';
+    color: #6a1617d5;
+    font-size: 20px;
+}
+
+.cat-info__age-val {
+    font-size: 22px;
+    font-weight: bold;
+}
+
+.cat-info__like_active {
+    color: #CE2724;
+    --animation-duration: 1s;
+    animation-name: heartBeat;
+    animation-duration: calc(var(--animation-duration)*1.3);
+    animation-timing-function: ease-in-out;
+}
+
+.cat-info__rate {
+    font-size: 21px;
+    font-style: italic;
+    font-weight: bold;
+    gap: 10px;
+    cursor: pointer;
+    font-family: 'Sofia Sans';
+    color: #16246ad5;
+}
+
 .popup__container1 {
     max-width: 600px;
     background-color: #f7fafb;
-     padding: 20px;
-    position: relative; 
+    padding: 20px;
+    position: relative;
     border-radius: 40px;
 }
